opengl/eglcontext: bail out early if we can't use complex shaders

Some old hardware is very limited in the amount of instructions it can support.
In order to not have KWin fail to composite, reject using hardware acceleration
in this case and fall back to llvmpipe or QPainter

BUG: 482868


(cherry picked from commit 5a0ecdba333dba233d54124909028971260b0f78)

Co-authored-by: Xaver Hugl <xaver.hugl@gmail.com>